# Piillomizer

./: .gitignore  README.md  main.py  mldtr.nuitka-package.config.yml  pyproject.toml  randomize_main.py  randomize_repack.py
.github/workflows/: build.yml
mldt ap/: __init__.py  archipelago.json  client.py  items.py  locations.py  options.py  regions.py  rules.py  web_world.py  world.py
mldtr/: __init__.py  __main__.py  main.py  randomize_main.py  randomize_music.py  randomize_repack.py
