[project]
name = "mldtr"
version = "0.1.0"
description = "A randomizer for Mario and Luigi: Dream Team."
authors = [
    {name = "Dimitri Bee"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mnllib (>=0.2.1,<0.3.0)",
    "pymsbmnl (>=1.1.0,<2.0.0)",
    "mnlscript (>=0.2.4,<0.3.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
